# adk-mcp-a2a-crash-course

./: .gitignore  AUTO_PROMPT_SYSTEM_SUMMARY.md  ENHANCED_PROMPT_SUMMARY.md  README_new.md  config.py  requirements.txt  test_focused_query.py
dba_agent/: README.md  agent.py  auto_prompt_agent.py  prompt.py  prompt_generator.py  test_dba_agent.py
mcp/: .gitignore  LICENSE  README.md  config.md  pyproject.toml  run.sh
mcp/src/mcp_db_server/: __init__.py  __main__.py  bind_analyzer.py  server.py
ui/: a2a_app.py
