[project]
name = "mcp-db-server"
version = "0.1.0"
description = "A read-only MCP server for interacting with databases."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "sql", "mysql", "database", "llm", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "pymysql>=1.1.1",
]

[project.urls]
"Homepage" = "https://github.com/vivekpathania/ai-experiments/tree/main/mcp"  # Replace with your repo URL
"Bug Tracker" = "https://github.com/vivekpathania/ai-experiments/issues" # Replace with your repo URL

[project.scripts]
mcp-db-server = "mcp_db_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3", "pytest>=8.0.0"]